Corrigindo a estrutura de pastas

--- a/Pratica03/pratica03e05.html
+++ b/Pratica03/pratica03e05.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prática 03 - Exercicio 05</title>
-    <link rel="stylesheet" href="pratica03e05.css">
+    <link rel="stylesheet" href="Pratica03/pratica03e05.css">
 </head>
 <body>
     <div class="container">
@@ -18,5 +18,5 @@
         </div>
     </div>
 </body>
-<script src="pratica03e05.js"></script>
+<script src="Pratica03/pratica03e05.js"></script>
 </html>
